--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,68 @@
+body {
+    background-color: gray;
+}
+
+
 h2 {
     text-align: center;
+    padding-bottom: 10px;
+    font-size: 40px;
 }
 
 article {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 5px solid gray;
+    border: 1px solid gainsboro;
     border-radius: 5px;
+    width: 900px;
+    margin: 0 auto;
+    background-color: white;
+}
+
+article > * {
+    margin: 10px 0;
 }
 
 #person-img {
     margin: 10px;
-    border-radius: 30px;
+    border-radius: 60px;
 }
+
+#author {
+    font-size: 30px;
+}
+
+#job {
+    color: skyblue;
+    font-size: 25px;
+}
+
+#info {
+    text-align: center;
+    color: navy;
+    font-size: 18px;
+}
+
+.prev-btn, .next-btn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  /* Adjust size as needed */
+    width: 80px;
+    height: 50px;
+}
+
+.prev-btn img, .next-btn img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .random-btn {
+    color: blue;
+    background-color: skyblue;
+    border-radius: 10px;
+    width: 120px;
+    height: 30px;
+    font-size: 15px;
+  }
